# jax-hdc

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MERGE_AND_CLEANUP.md  Makefile  NIX.md  PROJECT_SUMMARY.md  README.md  STATUS.md  default.nix  flake.nix  pyproject.toml  shell.nix  validate_codebase.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  benchmark_compare.py  benchmark_operations.py  benchmark_results.json
docs/: api.rst  classification.rst  conf.py  contributing.rst  embeddings.rst  examples.rst  functional.rst  index.rst  installation.rst  main.tex  memory.rst  models.rst  quickstart.rst  requirements.txt  utils.rst  vsa.rst
examples/: README.md  basic_operations.py  classification_simple.py  kanerva_example.py
jax_hdc/: __init__.py  _compat.py  constants.py  embeddings.py  functional.py  memory.py  metrics.py  models.py  structures.py  utils.py  vsa.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_functional.py  test_integration.py  test_memory.py  test_metrics.py  test_models.py  test_performance.py  test_structures.py  test_utils.py  test_vsa.py
