[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-hdc"
version = "0.1.0"
description = "A high-performance JAX library for Hyperdimensional Computing and Vector Symbolic Architectures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "JAX-HDC Contributors"},
]
keywords = [
    "hyperdimensional computing",
    "vector symbolic architectures",
    "HDC",
    "VSA",
    "JAX",
    "machine learning",
    "neural networks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.22.0",
    "optax>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
examples = [
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.urls]
Homepage = "https://github.com/rlogger/jax-hdc"
Documentation = "https://jax-hdc.readthedocs.io"
Repository = "https://github.com/rlogger/jax-hdc"
"Bug Tracker" = "https://github.com/rlogger/jax-hdc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_hdc*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jax_hdc --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
