[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-hdc"
version = "0.1.0a0"
description = "A high-performance JAX library for Hyperdimensional Computing and Vector Symbolic Architectures"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rajdeep Singh"},
]
keywords = [
    "hyperdimensional computing",
    "vector symbolic architectures",
    "HDC",
    "VSA",
    "JAX",
    "machine learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
examples = [
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]
benchmark = [
    "torch>=2.0.0",
    "torch-hd>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rlogger/jax-hdc"
Documentation = "https://jax-hdc.readthedocs.io"
Repository = "https://github.com/rlogger/jax-hdc"
"Bug Tracker" = "https://github.com/rlogger/jax-hdc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_hdc*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["jax_hdc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jax_hdc --cov-report=term-missing"
markers = [
    "benchmark: performance benchmark tests (run with -m benchmark to execute)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
